crates/nexus/tests/compile_fail/version_no_from_u64.stderr
error[E0308]: mismatched types
 --> tests/compile_fail/version_no_from_u64.rs:7:37
  |
7 |     let _v: Version = Version::from(42u64);
  |                       ------------- ^^^^^ expected `Version`, found `u64`
  |                       |
  |                       arguments to this function are incorrect
  |
note: associated function defined here
 --> $RUST/core/src/convert/mod.rs
  |
  |     fn from(value: T) -> Self;
  |        ^^^^
